--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -165,6 +165,28 @@
   publisher={Wiley Online Library}
 }
 
+@article{de2015testing,
+  title={Testing for baseline differences in randomized controlled trials: an unhealthy research behavior that is hard to eradicate},
+  author={De Boer, Michiel R and Waterlander, Wilma E and Kuijper, Lothar DJ and Steenhuis, Ingrid HM and Twisk, Jos WR},
+  journal={International Journal of Behavioral Nutrition and Physical Activity},
+  volume={12},
+  number={1},
+  pages={1--8},
+  year={2015},
+  publisher={BioMed Central}
+}
+
+@article{roberts1999baseline,
+  title={Baseline imbalance in randomised controlled trials},
+  author={Roberts, Chris and Torgerson, David J},
+  journal={Bmj},
+  volume={319},
+  number={7203},
+  pages={185},
+  year={1999},
+  publisher={British Medical Journal Publishing Group}
+}
+
 %%============================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
@@ -446,6 +468,15 @@
 
 
 % Methodology
+
+@article{abraha2015deviation,
+  title={Deviation from intention to treat analysis in randomised trials and treatment effect estimates: meta-epidemiological study},
+  author={Abraha, Iosief and Cherubini, Antonio and Cozzolino, Francesco and De Florio, Rita and Luchetta, Maria Laura and Rimland, Joseph M and Folletti, Ilenia and Marchesi, Mauro and Germani, Antonella and Orso, Massimiliano and others},
+  journal={bmj},
+  volume={350},
+  year={2015},
+  publisher={British Medical Journal Publishing Group}
+}
 
 @article{ma2020methodological,
   title={Methodological quality (risk of bias) assessment tools for primary and secondary medical studies: what are they and which is better?},
